// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributesToClear.vue All attributes cleared 1`] = `
<div>
  <h1 class id title>
    fluffy
  </h1>
  <h2 asdf id>
    mittens
  </h2>
  <h3 asdf data-test id>
    scruffy
  </h3>
</div>
`;

exports[`AttributesToClear.vue Default snapshot 1`] = `
<div>
  <h1 class="meow nyan" id="kitten" title="cat">
    fluffy
  </h1>
  <h2 asdf="qwer" id="kitten2">
    mittens
  </h2>
  <h3 asdf data-test="qwer" id>
    scruffy
  </h3>
</div>
`;

exports[`AttributesToClear.vue Just ID cleared 1`] = `
<div>
  <h1 class="meow nyan" id title="cat">
    fluffy
  </h1>
  <h2 asdf="qwer" id>
    mittens
  </h2>
  <h3 asdf data-test="qwer" id>
    scruffy
  </h3>
</div>
`;
